# sea-orm-sample

./: .env  Cargo.toml  docker-compose.yaml
migrations/: 20241114163816_init.sql
src/: main.rs
src/entity/: mod.rs  prelude.rs  users.rs
