[package]
name = "sea-orm-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "0.11", features = ["sqlx-postgres"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
dotenv = "0.15"  # For loading environment variables
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
